# jsync

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
jsync/: __init__.py  columns.py  job.py  jsync.py  rsync.py  syncer.py  utils.py
