[tool.poetry]
name = "jsync"
version = "0.1.0"
description = "Tool to run rsync utility in parallel"
authors = ["Vladimir Grebenshchikov <vova@zote.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
humanize = "^4.9"
rich = "^13.7"

[tool.poetry.group.dev.dependencies]
black = "^24"

[tool.poetry.scripts]
jsync = "jsync:synchronize"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]

[tool.black]
skip-string-normalization = 1
line-length = 100

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = '(?P<base>\d+(\.\d+)*)'
format-jinja = """
{%- set major, minor, patch = base.split('.') -%}
{%- if distance -%}
    {%- if patch == '0' -%}
        {{ major }}.{{ minor }}.{{ distance }}+g{{ commit }}
    {%- else -%}
        {{ base }}-{{ distance }}+g{{ commit }}
    {%- endif -%}
{%- else -%}
    {{ base }}
{%- endif -%}
"""
