[tool.poetry]
name = "jsync"
version = "0.2.0"
description = "Tool to run rsync utility in parallel"
authors = ["Vladimir Grebenshchikov <vova@zote.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
humanize = "^4.9"
rich = "^13.7"

[tool.poetry.scripts]
jsync = "jsync:synchronize"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
poetry-dynamic-versioning = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]

[tool.black]
skip-string-normalization = 1
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = '(?P<base>\d+(\.\d+)*)'
format-jinja = """
{%- set major, minor, patch = base.split('.') -%}
{%- if distance -%}
    {%- if patch == '0' -%}
        {{ major }}.{{ minor }}.{{ distance }}+g{{ commit }}
    {%- else -%}
        {{ base }}-{{ distance }}+g{{ commit }}
    {%- endif -%}
{%- else -%}
    {{ base }}
{%- endif -%}
"""
