[tool.poetry]
name = "jsync"
version = "0.2.0"
description = "Tool to run rsync utility in parallel"
authors = ["Vladimir Grebenshchikov <vova@zote.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
humanize = "^4.9"
rich = "^13.7"

[tool.poetry.scripts]
jsync = "jsync:synchronize"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.setuptools_scm]

[tool.black]
skip-string-normalization = true
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # w errors
    "C",  # complexity errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade,
    "PT",  # flake8-pytest-style
    "T10",  # flake8-pytest-style
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.format]
quote-style = "preserve"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = '(?P<base>\d+(\.\d+)*)'
format-jinja = """
{%- set major, minor, patch = base.split('.') -%}
{%- if distance -%}
    {%- if patch == '0' -%}
        {{ major }}.{{ minor }}.{{ distance }}+g{{ commit }}
    {%- else -%}
        {{ base }}-{{ distance }}+g{{ commit }}
    {%- endif -%}
{%- else -%}
    {{ base }}
{%- endif -%}
"""
